# todo-app-phase-003

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  package-lock.json
backend/: CLAUDE.md  CORS_SETUP.md  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  run_migrations.py  todo_app.db  verify_config.py
backend/alembic/: env.py
backend/alembic/versions/: 20251221_164149_initial_migration_for_users_and_tasks_tables.py
backend/src/: config.py  database.py  main.py
backend/src/middleware/: auth.py
backend/src/models/: task.py  user.py
backend/src/routers/: auth.py  chat.py  tasks.py
backend/src/schemas/: auth.py  chat.py  task.py
backend/src/tests/integration/: test_chat.py
backend/src/utils/: deps.py  security.py
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/chatbot/: page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/login/: page.tsx
frontend/app/privacy-policy/: page.tsx
frontend/app/register/: page.tsx
frontend/app/tasks/: page.tsx
frontend/app/terms-of-service/: page.tsx
frontend/components/: ChatWidget.tsx  DeleteConfirmModal.tsx  Dialog.tsx  EmptyState.tsx  LoginForm.tsx  RegisterForm.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/components/ui/: ErrorMessage.tsx  LoadingSpinner.tsx
frontend/lib/: api.ts  client-auth.ts  server-auth.ts
frontend/styles/: animations.css
frontend/types/: task.ts
specs/001-task-crud-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+15 files in other folders)
